# jvr

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: cli.rs  config.rs  constants.rs  env.rs  home.rs  jdk.rs  lib.rs  main.rs  os_unix.rs  os_windows.rs
