[package]
name = "jvr"
version = "0.1.0"
edition = "2021"

authors = ["photowey <photowey@gmail.com>"]
license = "Apache-2.0"

documentation = "https://docs.rs/jvr"
repository = "https://github.com/photowey/jvr"
homepage = "https://github.com/photowey/jvr"

description = """
A simple and easy-to-use Java version manager(registry: jvr), similar to Node.js's nvm,but it does not follow nvm's naming convention. Otherwise, it would benamed 'jvm', which could cause command conflicts or ambiguity.
"""

readme = "README.md"
keywords = ["JDK", "version"]
# https://crates.io/category_slugs
categories = ["command-line-utilities"]

[dependencies]
winreg = "0.52"
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
prettytable = "0.10"
